examples/reference/linker_regions_phase6_fill_in_bss_error.err
Assembly failed:
4: ERROR [asm202]
    4 |     .fill byte, 1, $ff
                      ^
ERROR: .fill is not allowed in kind=bss section (current kind=bss)
